--- a/index.html
+++ b/index.html
@@ -10,18 +10,10 @@
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="wrapper">
-      <header class="header"> Super Cool Album Covers</header>
+    <header class="header">Harry Potter Films</header>
       <hr>
-      <div id="gallery">
-        <ul class="list">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+    <div id="wrapper">
+      <div id="film">
       </div>
     </div>
     <script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
