--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header class="header">Harry Potter Films</header>
-      <hr>
+    <header class="header">Harry Potter Films and Games</header>
+    <hr>
     <div id="wrapper">
       <div id="film">
       </div>
