--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <div id="film">
       </div>
     </div>
+    <header id="flickrHeader">Flickr User's Harry Potter Photos</header>
+    <hr>
+    <div id="flickr">
+    </div>
     <script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/flickr.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
