--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header class="header">Harry Potter Films and Games</header>
+    <header class="header">Harry Potter Films and Games
+      <button type="submit" class="sortButton" id="yearSort">Sort By Year</button>
+    </header>
     <hr>
     <div id="wrapper">
       <div id="film">
       </div>
     </div>
-    <header id="flickrHeader">Flickr User's Harry Potter Photos</header>
+    <header id="flickrHeader">Flickr User's Harry Potter Photos
+      <button type="submit" class="sortButton" id="dateSort">Sort By Date</button>
+    </header>
     <hr>
     <div id="flickr">
     </div>
