--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div id="wrapper">
       <div id="film">
       </div>
+      <div class = "arrows">
+        <div class = "previous">
+        </div>
+        <div class = "next">
+        </div>
+      </div>
     </div>
     <header id="flickrHeader">Flickr User's Harry Potter Photos
       <button type="submit" class="sortButton" id="dateSort">Sort By Date</button>
