--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div id="overlay"><div id="card"><img><span></span></div></div>
     <header class="header">Harry Potter Films and Games
       <button type="submit" class="sortButton" id="yearSort">Sort By Year</button>
     </header>
