--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="overlay">
       <div id="card">
-          <img id="slideShow">
+          <img id="slideShow" src="file://null" alt='Harry Potter Movie Poster'>
         <span></span>
       </div>
     </div>
@@ -24,7 +24,6 @@
       <div id="film">
       </div>
       </div>
-    </div>
     <header id="flickrHeader">Flickr User's Harry Potter Photos
       <button type="submit" class="sortButton" id="dateSort">Sort By Date</button>
     </header>
